--- a/src/setup/defaultSettings/moneyFormatSettings.json
+++ b/src/setup/defaultSettings/moneyFormatSettings.json
@@ -2,19 +2,19 @@
   {
     "settingCategory": "money_format_settings",
     "settingKey": "default_currency_code",
-    "settingValue": "USD",
+    "settingValue": "INR",
     "valueType": "string"
   },
   {
     "settingCategory": "money_format_settings",
     "settingKey": "currency_name",
-    "settingValue": "US Dollars",
+    "settingValue": "Indian Rupee",
     "valueType": "string"
   },
   {
     "settingCategory": "money_format_settings",
     "settingKey": "currency_symbol",
-    "settingValue": "$",
+    "settingValue": "₹",
     "valueType": "string"
   },
   {
